[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

anyhow = "1"
thiserror = "1"

once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

futures = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-context = "0.1"
tokio-test = "0.4"

log = "0.4"

mongodb = "2"

crossgate = { git = "https://github.com/ddx2x/crossgate.git", branch = "master" }


[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
